# pymmcore-openscan

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: bh_dcc_widget.py  bh_dcu_widget.py  openscan_params_widget.py  spc.py  spectra_physics_ds_widget.py
src/pymmcore_openscan/: _settings.py  _util.py
src/pymmcore_openscan/sim/: __init__.py  spectra_physics_ds.py
src/pymmcore_openscan/widgets/: __init__.py  openscan_params.py  spc_rate_graph.py
src/pymmcore_openscan/widgets/spectra_physics_ds/: _1040_shutter.py  __init__.py  _diode_widget.py  _history_buffer.py  _laser_button.py  _laser_control_panel.py  _laser_diagnostics.py  _main_shutter.py  _power_bar.py  _power_graph.py  _shutter_button.py  _utils.py  _wavelength_widget.py
tests/: test_openscan_params.py
